# algorithmic-efficiency

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CALL_FOR_SUBMISSIONS.md  CHANGELOG.md  COMPETITION_RULES.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  GETTING_STARTED.md  README.md  RULES.md  SUBMISSION_PROCESS_RULES.md  alpe_env.yml  bn.py  check_gpu.py  check_halton_TMP.py  compare_lstms.py  custom_pytorch_jax_converter.py  dataset_setup.py  download_wmt.py  dump_librispeech_batch.py  getting_started.md  mlcube.yaml  mnist.py  mnist_example.py  mnist_submission.py  mnist_workload.py  p_compare_deepspeech.py  pylintrc  pyproject.toml  random_utils.py  requirements.txt  run_all_workloads.py  run_jax.sh  run_torch.sh  set_env_variable.sh  setup.cfg  setup.py  (+5 more)
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_workload.md
.github/workflows/: CI.yml  cla.yml  linting.yml  regression_tests.yml  regression_tests_python_upgrade.yml  regression_tests_variants.yml  score_external_tuning_submission.yml  shampoo_tests.yml  traindiffs_tests.yml
algoperf/: __init__.py  checkpoint_utils.py  data_utils.py  halton.py  init_utils.py  interop_utils.py  jax_sharding_utils.py  jax_utils.py  logger_utils.py  param_utils.py  profiler.py  pytorch_utils.py  random_utils.py  sharding_utils.py  spec.py
algoperf/workloads/: dropout_modules.py  utils.py  workloads.py
algorithmic_efficiency/: __init__.py  autoaugment_utils.py  checkpoint_utils.py  data_utils.py  early_stopping.py  early_stopping_test.py  ffcv_utils.py  fixed_space.py  halton.py  init_utils.py  interop_utils.py  logger_utils.py  logging_utils.py  logging_utils_test.py  param_utils.py  profiler.py  pytorch_utils.py  random_utils.py  scoring.py  sharding_utils.py  spec.py  submission_runner.py  workload_utils.py
algorithmic_efficiency/workloads/: utils.py  workloads.py
algorithms/: README.md  submission_checker.py
algorithms/archived_paper_baselines/: README.md
algorithms/baselines/: README.md
algorithms/paper_baselines/: README.md
algorithms/target_setting_algorithms/: README.md  data_selection.py  get_batch_size.py  jax_adamw.py  jax_momentum.py  jax_nadamw.py  jax_nesterov.py  pytorch_adamw.py  pytorch_momentum.py  pytorch_nadamw.py  pytorch_nesterov.py
algorithms/template/: submission.py
baselines/: README.md
baselines/adafactor/: tuning_search_space.json  tuning_search_space_no_beta1.json
baselines/adamw/: tuning_search_space.json  tuning_search_space_no_beta1.json
baselines/lamb/: tuning_search_space.json  tuning_search_space_no_beta1.json
baselines/logging_example/: README.md
baselines/momentum/: tuning_search_space.json  tuning_search_space_no_beta1.json
baselines/nadamw/: tuning_search_space.json  tuning_search_space_no_beta1.json
baselines/nesterov/: tuning_search_space.json  tuning_search_space_no_beta1.json
baselines/sam/: tuning_search_space.json  tuning_search_space_no_beta1.json
baselines/shampoo/: tuning_search_space.json
dataset/: README.md  dataset_setup.py  librispeech_preprocess.py  librispeech_tokenizer.py
datasets/: README.md  criteo_debug.py  data_setup.sh  dataset_setup.py  development_dataset_setup.py  librispeech_preprocess.py  librispeech_tokenizer.py
datasets_algoperf/: dataset_setup.py  librispeech_preprocess.py
docker/: Dockerfile  Dockerfile.dev  Dockerfile.score  README  README.md  Singularity.def  build_docker_images.sh  cloudbuild.yaml  download_dataset.py  setup.sh  startup.sh
docker-scripts/: host-startup.sh  startup.sh
docker/datasets/: dataset_setup.py  librispeech_preprocess.py  librispeech_tokenizer.py
docker/scripts/: check_gpu.py  cloud-init.cfg  cloud-startup.sh  host-startup.sh  singularity_converter.py  startup.sh  startup_dev.sh  test_startup.sh
docs/: CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  GETTING_STARTED.md
docs/.old/: CALL_FOR_SUBMISSIONS.md  COMPETITION_RULES.md
exp/: optlist.py
exp/condor/: auto_run.sh  criteo.sh  criteo.sub  fastmri.sh  fastmri.sub  imagenet_resnet.sh  imagenet_resnet.sub  imagenet_vit.sh  imagenet_vit.sub  librispeech_conformer.sh  librispeech_conformer.sub  librispeech_deepspeech.sh  librispeech_deepspeech.sub  mnist.sh  mnist_distributed.sh  ogbg.sh  ogbg.sub  submit_all.sh  wmt.sh  wmt.sub
exp/data_setup/: cifar.sh  criteo.sh  fastmri.sh  fastmri_direct_download.sh  imagenet.sh  imagenet_exp.sh  (+8 more)
experiments/: README.md
ie_test/: tuning_search_space.json
mlcube/: README.md  mlcube.yaml
models/: base.py  mnist_numpy.py  mnist_pytorch.py
prize_qualification_baselines/: README.md
scoring/: compute_speedups.py  generate_held_out_workloads.py  make_job_config.py  nico_exp.py  package_logs.py  performance_profile.py  run_workloads.py  score_profile.py  score_submission.py  score_submissions.py  scoring.py  scoring_utils.py  test_performance_profile.py  test_scoring_utils.py  workload_meta_data.json
specification/: draft_api.py
submissions/: submission.py  submission_checker.py
target_setting_runs/: README.md  cosine_warmup.py  data_selection.py  get_batch_size.py  jax_adamw.py  jax_nadamw.py  jax_nesterov.py  jax_submission_base.py  pytorch_adamw.py  pytorch_nadamw.py  pytorch_nesterov.py  pytorch_submission_base.py
tests/: check_cuda_cudnn.py  e2e_test.py  machine_sanity_check.py  reference_algorithm_tests.py  reference_submission_tests.py  submission_runner_test.py  test_baselines.py  test_evals_time.py  test_jax_sharding_invariance.py  test_jax_utils.py  test_num_params.py  test_param_shapes.py  test_param_types.py  test_ssim.py  test_submission_runner.py  test_traindiffs.py  test_version.py  torch2jax_utils.py  version_test.py
utils/: group_1_variants_target_setting_workload_config.json  group_2_variants_target_setting_workload_config.json  group_3_variants_target_setting_workload_config.json  group_4_variants_target_setting_workload_config.json  group_5_variants_target_setting_workload_config.json  run_workloads.py  target_setting_workload_config.json  variants_group_1.json  variants_group_2.json  workload_config.json
(+1671 files in other folders)
